@@ -1,5 +1,7 @@
 NOCC 0.9.6    ??, 2002
 
+    * Added a function 'get_default_from_address' to allow admins to
+      customise the default address in their conf.php. (#563396)
     * A whole load of tidying up of the folder-related code.
     * Changed the way prefs functions return exceptions.
     * Improved the exception reporting from the nocc_imap class.
